--- a/soncircle.html
+++ b/soncircle.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(245, 30, 2);
+            background-color: rgb(132, 245, 2);
         }
         #video-container {
             position: relative;
@@ -725,6 +725,8 @@
             }
           }
         }
+
+        console.log("brightness ", brightness);
       }
     
       if (count > 0) {
