--- a/soncircle.html
+++ b/soncircle.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(241, 245, 2);
+            background-color: rgb(245, 2, 233);
         }
         #video-container {
             position: relative;
@@ -173,7 +173,7 @@
         let availableSynths = []
         let grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
         // first set of pentatonic scales
-        let pentatonicScale = ['A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5'];
+        let pentatonicScale = ['A2', null, 'C3', null, 'D3', null, 'E3', null, 'G3', null, 'A3', null, 'C4', null, 'D4', null, 'E4', null, 'G4', null, 'A4', null, 'C5', null, 'D5', null, 'E5', null, 'G5'];
         let pentatonicScale2 = ['B2', 'D3', 'E3', 'F#3', 'A3', 'B3', 'D4', 'E4', 'F#4', 'A4', 'B4', 'D5', 'E5', 'F#5', 'A5'];
        
         // second set of pentatonic scales
