--- a/soncircle_drum.html
+++ b/soncircle_drum.html
@@ -577,13 +577,7 @@
 
                     //synth = new Tone.Synth().connect(gainNode);
 
-                    synth = new Tone.Sampler({
-                    urls: {
-                        A1: "A1.mp3",
-                        A2: "A2.mp3",
-                    },
-                    baseUrl: "https://tonejs.github.io/audio/casio/",
-                }).connect(gainNode);
+                    synth = new Tone.MembraneSynth().connect(gainNode);
   /*                  synth = new Tone.AMSynth({
 
                                 envelope : {
