--- a/soncircle_drum.html
+++ b/soncircle_drum.html
@@ -577,16 +577,7 @@
 
                     //synth = new Tone.Synth().connect(gainNode);
 
-                    synth = new Tone.Sampler({
-    urls: {
-        A1: "A1.mp3",
-        A2: "A2.mp3",
-    },
-    baseUrl: "https://tonejs.github.io/audio/casio/",
-    onload: () => {
-        sampler.triggerAttackRelease(["C1", "E1", "G1", "B1"], 0.5);
-    }
-}).connect(gainNode);
+                    synth = new Tone.NoiseSynth().connect(gainNode);
   /*                  synth = new Tone.AMSynth({
 
                                 envelope : {
