changing tonality function

--- a/soncircle_drum.html
+++ b/soncircle_drum.html
@@ -577,11 +577,11 @@
 
                     //synth = new Tone.Synth().connect(gainNode);
 
-                    synth = new Tone.PluckSynth()..connect(gainNode);
+                    synth = new Tone.PluckSynth().connect(gainNode);
   /*                  synth = new Tone.AMSynth({
 
                                 envelope : {
-                                    attack : 0.2 ,
+                                    attack : 0.2 
                                     decay : 0.9 ,
                                     sustain : 0.8 ,
                                     release : 0.8
