changing tonality function

--- a/soncircle_drum.html
+++ b/soncircle_drum.html
@@ -580,11 +580,11 @@
                     synth = new Tone.Sampler({
 
     
-                "A2" : "/samples/k1.mp3",
-                "C3" : "/samples/s1.mp3",
-                "D3" : "/samples/hh1.mp3",
-                "E3" : "/samples/hh2.mp3",
-                "G3" : "/samples/s2.mp3"
+                "A2" : "./samples/k1.mp3",
+                "C3" : "./samples/s1.mp3",
+                "D3" : "./samples/hh1.mp3",
+                "E3" : "./samples/hh2.mp3",
+                "G3" : "./samples/s2.mp3"
 
             }).connect(gainNode);
 
