changing tonality function

--- a/soncircle_drum.html
+++ b/soncircle_drum.html
@@ -207,8 +207,13 @@
                 "A2" : "./samples/k1.mp3",
                 "C3" : "./samples/s1.mp3",
                 "D3" : "./samples/hh1.mp3",
-                "E3" : "./samples/hh2.mp3",
-                "G3" : "./samples/s2.mp3"
+                "E3" : "./samples/kk1.mp3",
+                "G3" : "./samples/s2.mp3",
+                "A3" : "./samples/k2.mp3",
+                "C4" : "./samples/s2.mp3",
+                "D4" : "./samples/hh2.mp3",
+                "E4" : "./samples/kk2.mp3",
+                "G4" : "./samples/s3.mp3"
                 }).connect(gainNode);
         const basicSynth = new Tone.Synth().connect(gainNode);
         gainNode.gain.value = 0.4;
