--- a/soncircle_drum.html
+++ b/soncircle_drum.html
@@ -219,7 +219,7 @@
         gainNode.gain.value = 0.4;
         gainNode2.gain.value = 0.4;
 
-        const key1pressed;
+        const key1pressed = true;
 
 
         const synth2 = new Tone.MonoSynth({
