changing tonality function

--- a/soncircle_drum.html
+++ b/soncircle_drum.html
@@ -219,7 +219,7 @@
         gainNode.gain.value = 0.4;
         gainNode2.gain.value = 0.4;
 
-        var key1pressed = true;
+        var key1pressed = false;
 
 
         const synth2 = new Tone.MonoSynth({
