--- a/son5.html
+++ b/son5.html
@@ -562,7 +562,7 @@
                 synth = availableSynths.pop();
             } else {
 
-                    synth = new Tone.AMSynth({
+                    synth = new Tone.Synth({
 
                                 envelope : {
                                     attack : 0.2 ,
