--- a/son5.html
+++ b/son5.html
@@ -569,7 +569,10 @@
                                     decay : 0.5 ,
                                     sustain : 0.5 ,
                                     release : 0.8
-                                    }
+                                    },
+                                oscillator: {
+                                    type : sine
+                                }
                                 }).connect(gainNode);
 
                 }
