--- a/son5.html
+++ b/son5.html
@@ -571,7 +571,7 @@
                                     release : 0.8
                                     },
                                 oscillator: {
-                                    type : sine
+                                    type : "sine"
                                 }
                                 }).connect(gainNode);
 
