--- a/son5.html
+++ b/son5.html
@@ -570,9 +570,9 @@
                                     sustain : 0.5 ,
                                     release : 0.6
                                     },
-                                oscillator: {
-                                    type : "sine"
-                                }
+                                //oscillator: {
+                                 //   type : "sine"
+                                //}
                                 }).connect(gainNode);
 
                 }
