--- a/samples.html
+++ b/samples.html
@@ -208,7 +208,7 @@
                 
                 curve: "linear",
                 onload: () => {
-                    sampler.triggerAttackRelease('C4', 2000)
+                    samplerSynth.triggerAttackRelease('C4', 2000)
                     },
                 attack : 5 // is this supposed to be 5 seconds?
                 }).connect(gainNode);
