--- a/samples.html
+++ b/samples.html
@@ -200,11 +200,12 @@
         const gainNode2 = new Tone.Gain().toDestination();
 
         const samplerSynth = new Tone.Sampler({                    
-                "A2" : "./samples/sample6.mp3",
-                "C3" : "./samples/sample2.mp3",
-                "D3" : "./samples/sample3.mp3",
-                "E3" : "./samples/sample4.mp3",
-                "G3" : "./samples/sample5.mp3",
+                "C1" : "./samples/sample1.mp3",
+                "D1" : "./samples/sample2.mp3",
+                "E1" : "./samples/sample3.mp3",
+                "F1" : "./samples/sample4.mp3",
+                "G1" : "./samples/sample5.mp3",
+                "A1" : "./samples/sample6.mp3",
                 
                 curve: "linear",
                 onload: () => {
