--- a/samples.html
+++ b/samples.html
@@ -201,11 +201,18 @@
 
         const samplerSynth = new Tone.Sampler({                    
                 "C3" : "./samples/sample1.mp3",
-                "D3" : "./samples/sample2.mp3",
-                "E3" : "./samples/sample3.mp3",
-                "F3" : "./samples/sample4.mp3",
+                "C#3" : "./samples/sample11.mp3",
+                "D3" : "./samples/sample111.mp3",
+                "D#3" : "./samples/sample1111.mp3",
+                "E3" : "./samples/sample2.mp3",
+                "F3" : "./samples/sample3.mp3",
+                "F#3" : "./samples/sample4.mp3",
                 "G3" : "./samples/sample5.mp3",
-                "A3" : "./samples/sample6.mp3",
+                "G#3" : "./samples/sample55.mp3",
+                "A3" : "./samples/sample555.mp3",
+                "A#3" : "./samples/sample6.mp3",
+                "B3" : "./samples/sample66.mp3",
+                "B#3" : "./samples/sample666.mp3",
    
                 }).connect(gainNode);
         const basicSynth = new Tone.Synth().connect(gainNode);
