--- a/samples.html
+++ b/samples.html
@@ -235,10 +235,25 @@
                 "G#3" : "./samples/sample77.mp3",
                 "G#4" : "./samples/sample7.mp3",
 
-                "A3" : "./samples/sample8.mp3",
-                "A#3" : "./samples/sample88.mp3",
-                "B3" : "./samples/sample888.mp3",
-                "B#3" : "./samples/sample8888.mp3",
+                "A1" : "./samples/sample8.mp3",
+                "A2" : "./samples/sample88.mp3",
+                "A3" : "./samples/sample888.mp3",
+                "A4" : "./samples/sample8888.mp3",
+
+                "A#2" : "./samples/sample0.mp3",
+                "A#3" : "./samples/sample00.mp3",
+                "A#4" : "./samples/sample000.mp3",
+                "A#5" : "./samples/sample0000.mp3",
+
+                "B2" : "./samples/sampleB.mp3",
+                "B3" : "./samples/sampleBB.mp3",
+                "B4" : "./samples/sampleBBBB.mp3",
+                "B5" : "./samples/sampleBBB.mp3",
+
+                "B#2" : "./samples/sample9.mp3",
+                "B#3" : "./samples/sample99.mp3",
+                "B#4" : "./samples/sample999.mp3",
+
    
                 }).connect(gainNode);
         const basicSynth = new Tone.Synth().connect(gainNode);
