--- a/samples.html
+++ b/samples.html
@@ -206,6 +206,9 @@
                 "G2" : "./samples/sample0.mp3",
                 "G3" : "./samples/sample00.mp3",
                 "A#4" : "./samples/sample000.mp3",
+                "A2" : "./samples/sample1.mp3",
+                "A#3" : "./samples/sample11.mp3",
+                "C4" : "./samples/sample111.mp3",
 
 
 /*
