--- a/samples.html
+++ b/samples.html
@@ -201,8 +201,11 @@
 
         const samplerSynth = new Tone.Sampler({  
             
-            
-                "A2" : "./samples/sample1.mp3",
+            "C3" : "./samples/sample9.mp3",
+            "A#2" : "./samples/sample99.mp3",
+            "F2" : "./samples/sample999.mp3",
+                "A3" : "./samples/sample1.mp3",
+                "C4" : "./samples/sample66666.mp3",
                 "G2" : "./samples/sampleA.mp3",
                 "D3" : "./samples/sampleAA.mp3",
                 "F3" : "./samples/sample6666.mp3",
