--- a/samples.html
+++ b/samples.html
@@ -285,14 +285,7 @@
         gainNode2.gain.value = 0.4;
 
 
-        const synth2 = new new Tone.Sampler({  
-             
-             "C2" : "./samples/synthC2.mp3",
-             "C3" : "./samples/synthC3.mp3",
-             "D2" : "./samples/synthD2.mp3",
-             "D3" : "./samples/synthD3.mp3",
-             "G2" : "./samples/synthG2.mp3",
-             "G3" : "./samples/synthG3.mp3",
+        const synth2 = new Tone.MonoSynth({
             
 
         }).connect(gainNode2);
