--- a/samples.html
+++ b/samples.html
@@ -207,7 +207,7 @@
                 "D3" : "./samples/synthD3.mp3",
                 "G2" : "./samples/synthG2.mp3",
                 "G3" : "./samples/synthG3.mp3",
-                "A3" : "./samples/sampleAA.mp3",
+                "Eb3" : "./samples/sampleBBB.mp3",
 
 
 
