--- a/samples.html
+++ b/samples.html
@@ -200,13 +200,14 @@
         const gainNode2 = new Tone.Gain().toDestination();
 
         const samplerSynth = new Tone.Sampler({  
-             
+                "Bb2" : "./samples/sample55.mp3",
                 "C2" : "./samples/synthC2.mp3",
                 "C3" : "./samples/synthC3.mp3",
                 "D2" : "./samples/synthD2.mp3",
-                "D3" : "./samples/synthD3.mp3",
+                "F2" : "./samples/samples777777.mp3",
                 "G2" : "./samples/synthG2.mp3",
                 "G3" : "./samples/synthG3.mp3",
+                "D3" : "./samples/sampleBBBB.mp3",
                 "Eb3" : "./samples/sampleBBB.mp3",
 
 
