--- a/samples.html
+++ b/samples.html
@@ -207,8 +207,8 @@
                 "D2" : "./samples/sampleBBBB.mp3",
                 "Eb2" : "./samples/sampleBBB.mp3",
 
-                "C2" : "./samples/samples77777.mp3",
-                "F2" : "./samples/samples777777.mp3",
+                "C2" : "./samples/sample77777.mp3",
+                "F2" : "./samples/sample777777.mp3",
                 
                 
                 "C3" : "./samples/synthC3.mp3",
