--- a/samples2.html
+++ b/samples2.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgb(245, 2, 213);
+            background-color: rgba(245, 2, 213, 0.883);
         }
         #video-container {
             position: relative;
@@ -61,7 +61,7 @@
         .cell {
             width: 16px;
             height: 16px;
-            border: 2px solid rgb(0, 0, 0);
+            border: 1px solid rgb(0, 0, 0);
             border-radius: 50px;
         }
         .alive {
