--- a/samples2.html
+++ b/samples2.html
@@ -113,8 +113,8 @@
             context.drawImage(videoElement, offsetX, 0, videoElement.videoHeight, videoElement.videoHeight, 0, 0, canvas.width, canvas.height);
             const imageData = context.getImageData(0, 0, videoWidth, videoHeight).data;
 
-            for (let y = 0; y < 20; y++) {
-                for (let x = 0; x < 20; x++) {
+            for (let y = 0; y < 40; y++) {
+                for (let x = 0; x < 40; x++) {
                     const pixelIndex = (y * videoWidth * 4 * pixelSize) + (x * 4 * pixelSize);
                     let averageBrightness = 0;
 
@@ -125,6 +125,7 @@
                         }
                     }
                     averageBrightness /= (pixelSize * pixelSize);
+                    console.log(averageBrightness);
 
                     if ((averageBrightness > threshold) && (averageBrightness < threshold2)){
                         if (!pixelGrid[y][x]) {
