--- a/samples2.html
+++ b/samples2.html
@@ -112,8 +112,8 @@
             const offsetX = (videoElement.videoWidth - videoElement.videoHeight) / 2;
             context.drawImage(videoElement, offsetX, 0, videoElement.videoHeight, videoElement.videoHeight, 0, 0, canvas.width, canvas.height);
             const imageData = context.getImageData(0, 0, videoWidth, videoHeight).data;
-            const frame1 = context.getImageData(0, 0, videoWidth, videoHeight);
-            let previousFrame1 = null;
+         //   const frame1 = context.getImageData(0, 0, videoWidth, videoHeight);
+         //   let previousFrame1 = null;
 
             /// ny kode her
 
