--- a/soncircle.html
+++ b/soncircle.html
@@ -112,6 +112,7 @@
             const offsetX = (videoElement.videoWidth - videoElement.videoHeight) / 2;
             context.drawImage(videoElement, offsetX, 0, videoElement.videoHeight, videoElement.videoHeight, 0, 0, canvas.width, canvas.height);
             const imageData = context.getImageData(0, 0, videoWidth, videoHeight).data;
+            console.log("imageData: ", imageData);
 
             for (let y = 0; y < 20; y++) {
                 for (let x = 0; x < 20; x++) {
