--- a/soncircle.html
+++ b/soncircle.html
@@ -123,6 +123,7 @@
                         for (let j = 0; j < pixelSize; j++) {
                             const index = pixelIndex + (i * videoWidth * 4) + (j * 4);
                             averageBrightness += (imageData[index] + imageData[index + 1] + imageData[index + 2]) / 3;
+                            console.log("red: ", imageData(i));
                         }
                     }
                     averageBrightness /= (pixelSize * pixelSize);
