--- a/soncircle.html
+++ b/soncircle.html
@@ -113,7 +113,7 @@
             const offsetX = (videoElement.videoWidth - videoElement.videoHeight) / 2;
             context.drawImage(videoElement, offsetX, 0, videoElement.videoHeight, videoElement.videoHeight, 0, 0, canvas.width, canvas.height);
             const imageData = context.getImageData(0, 0, videoWidth, videoHeight).data;
-            console.log("imageData: ", imageData);
+            //console.log("imageData: ", imageData);
 
             for (let y = 0; y < 20; y++) {
                 for (let x = 0; x < 20; x++) {
@@ -136,13 +136,13 @@
                     }
                     averageBrightness /= (pixelSize * pixelSize);
                     redBrightness /= (pixelSize * pixelSize);
-                    console.log("red Brightness ",  redBrightness);
+                   // console.log("red Brightness ",  redBrightness);
 
                     //if ((averageBrightness > threshold) && (averageBrightness < threshold2)){ //generell lysstyrke
-                    if (redBrightness > 150){
+                    if (redBrightness > 200){
                         if (!pixelGrid[y][x]) {
                             pixelGrid[y][x] = true;
-                            context.fillStyle = '#FFFFFF';
+                            context.fillStyle = 'white';
                             context.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
                             grid[y][x] = 1;
                         }
