--- a/gamelan.html
+++ b/gamelan.html
@@ -218,14 +218,14 @@
 
 
                 
-                "A2" : "./gamelan/1.wav",
-                "C3" : "./gamelan/2.wav",
-                "D3" : "./gamelan/3.wav",
-                "E3" : "./gamelan/4.wav",
+                "A2" : "./gamelan/1.mp3",
+                "C3" : "./gamelan/2.mp3",
+                "D3" : "./gamelan/3.mp3",
+                "E3" : "./gamelan/4.mp3",
 
-                "G3" : "./gamelan/5.wav",
-                "A3" : "./gamelan/6.wav",
-                "C3" : "./gamelan/7.wav",
+                "G3" : "./gamelan/5.mp3",
+                "A3" : "./gamelan/6.mp3",
+                "C3" : "./gamelan/7.mp3",
                 
    
 
