--- a/gamelan.html
+++ b/gamelan.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgba(2, 38, 245, 0.883);
+            background-color: rgba(99, 245, 2, 0.883);
         }
         #video-container {
             position: relative;
@@ -218,14 +218,14 @@
 
 
                 
-                "A2" : "./gamelan/1.mp3",
-                "C3" : "./gamelan/2.mp3",
-                "D3" : "./gamelan/3.mp3",
-                "E3" : "./gamelan/4.mp3",
+                "A2" : "./samples/gamelan/1.mp3",
+                "C3" : "./samples/gamelan/2.mp3",
+                "D3" : "./samples/gamelan/3.mp3",
+                "E3" : "./samples/gamelan/4.mp3",
 
-                "G3" : "./gamelan/5.mp3",
-                "A3" : "./gamelan/6.mp3",
-                "C3" : "./gamelan/7.mp3",
+                "G3" : "./samples/gamelan/5.mp3",
+                "A3" : "./samples/gamelan/6.mp3",
+                "C3" : "./samples/gamelan/7.mp3",
                 
    
 
