--- a/gamelan.html
+++ b/gamelan.html
@@ -216,7 +216,7 @@
 
             //'A#2', 'C#3', 'D#3', 'F3', 'G#3', 'A#3',
 
-
+/*
                 
                 "A2" : "./samples/gamelan/1.mp3",
                 "C3" : "./samples/gamelan/2.mp3",
@@ -225,14 +225,13 @@
 
                 "G3" : "./samples/gamelan/5.mp3",
                 "A3" : "./samples/gamelan/6.mp3",
-                "C3" : "./samples/gamelan/7.mp3",
-                
+                "C3" : "./samples/gamelan/7.mp3", */
    
 
 
 
 
-/*
+
 
 /// veldig kul kombo, ta vare på:
 
@@ -295,7 +294,7 @@
                 "B2" : "./samples/sampleB.mp3",
                 "B3" : "./samples/sampleBB.mp3",
                 "B4" : "./samples/sampleBBBB.mp3",
-                "B5" : "./samples/sampleBBB.mp3", */
+                "B5" : "./samples/sampleBBB.mp3", 
 
 
 
