--- a/gamelan.html
+++ b/gamelan.html
@@ -216,23 +216,23 @@
 
             //'A#2', 'C#3', 'D#3', 'F3', 'G#3', 'A#3',
 
-/*
+
                 
-                "A2" : "./samples/gamelan/1.mp3",
-                "C3" : "./samples/gamelan/2.mp3",
-                "D3" : "./samples/gamelan/3.mp3",
-                "E3" : "./samples/gamelan/4.mp3",
+                "C3" : "./samples/gamelan/1.mp3",
+                "D3" : "./samples/gamelan/2.mp3",
+                "E3" : "./samples/gamelan/3.mp3",
+                "F3" : "./samples/gamelan/4.mp3",
 
                 "G3" : "./samples/gamelan/5.mp3",
                 "A3" : "./samples/gamelan/6.mp3",
-                "C3" : "./samples/gamelan/7.mp3", */
+                "B3" : "./samples/gamelan/7.mp3", 
    
 
 
 
 
 
-
+/*
 /// veldig kul kombo, ta vare på:
 
                 "G2" : "./samples/sampleA.mp3",
@@ -294,8 +294,7 @@
                 "B2" : "./samples/sampleB.mp3",
                 "B3" : "./samples/sampleBB.mp3",
                 "B4" : "./samples/sampleBBBB.mp3",
-                "B5" : "./samples/sampleBBB.mp3", 
-
+                "B5" : "./samples/sampleBBB.mp3", */
 
 
    
