--- a/gamelan.html
+++ b/gamelan.html
@@ -216,7 +216,7 @@
 
             //'A#2', 'C#3', 'D#3', 'F3', 'G#3', 'A#3',
 
-
+/*
                 
                 "C3" : "./samples/gamelan/1.mp3",
                 "D3" : "./samples/gamelan/2.mp3",
@@ -225,14 +225,14 @@
 
                 "G3" : "./samples/gamelan/5.mp3",
                 "A3" : "./samples/gamelan/6.mp3",
-                "B3" : "./samples/gamelan/7.mp3", 
+                "B3" : "./samples/gamelan/7.mp3", */
    
 
 
 
 
 
-/*
+
 /// veldig kul kombo, ta vare på:
 
                 "G2" : "./samples/sampleA.mp3",
@@ -247,6 +247,7 @@
                 "C2" : "./samples/sample1.mp3",
                 "C3" : "./samples/sample11.mp3",
                 "C4" : "./samples/sample11.mp3",
+                "C5" : "./samples/gamelan/7.mp3"
 
                 "C#2" : "./samples/sample9.mp3",
                 "C#3" : "./samples/sample99.mp3",
@@ -294,7 +295,7 @@
                 "B2" : "./samples/sampleB.mp3",
                 "B3" : "./samples/sampleBB.mp3",
                 "B4" : "./samples/sampleBBBB.mp3",
-                "B5" : "./samples/sampleBBB.mp3", */
+                "B5" : "./samples/sampleBBB.mp3", 
 
 
    
