--- a/gamelan.html
+++ b/gamelan.html
@@ -247,7 +247,7 @@
                 "C2" : "./samples/sample1.mp3",
                 "C3" : "./samples/sample11.mp3",
                 "C4" : "./samples/sample11.mp3",
-                "C5" : "./samples/gamelan/7.mp3"
+                "C5" : "./samples/gamelan/7.mp3",
 
                 "C#2" : "./samples/sample9.mp3",
                 "C#3" : "./samples/sample99.mp3",
