--- a/gamelan.html
+++ b/gamelan.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgba(99, 245, 2, 0.883);
+            background-color: rgba(245, 91, 2, 0.883);
         }
         #video-container {
             position: relative;
@@ -140,7 +140,7 @@
                     if (redBrightness > 150){
                         if (!pixelGrid[y][x]) {
                             pixelGrid[y][x] = true;
-                            context.fillStyle = '#000';
+                            context.fillStyle = '#FF0000';
                             context.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
                             grid[y][x] = 1;
                         }
