--- a/ny2.html
+++ b/ny2.html
@@ -78,8 +78,8 @@
 }
 
 #webcam {
-  width: 100%;
-  height: 100%;
+    width: 640px;
+            height: 640px;
   position: absolute;
   top: 0;
   left: 0;
@@ -90,8 +90,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 640px;
+            height: 640px;
   z-index: 2;
   opacity: 0.4; /* Gjør gridene delvis gjennomsiktige */
 }
