--- a/ny2.html
+++ b/ny2.html
@@ -79,11 +79,12 @@
 
 #webcam {
     width: 640px;
-            height: 640px;
+    height: 480px;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
+  display: none;
 }
 
 #grid-red, #grid-green, #grid-blue {
@@ -91,7 +92,7 @@
   top: 0;
   left: 0;
   width: 640px;
-            height: 640px;
+height: 480px;
   z-index: 2;
   opacity: 0.4; /* Gjør gridene delvis gjennomsiktige */
 }
