--- a/ny2.html
+++ b/ny2.html
@@ -90,7 +90,7 @@
 #grid-red, #grid-green, #grid-blue {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50px;
   width: 640px;
 height: 480px;
   z-index: 2;
